# ur5_pick_and_place_opencv

./: CMakeLists.txt  package.xml
include/: misc.h
lib/: misc.cpp
src/: box_pick.cpp  box_pick_test.cpp
